app/style.css
* {
  box-sizing: border-box;
}

/* body {
  margin: 0;
  font-family: system-ui, sans-serif;
  color: black;
  background-color: white;
} */

body {
  font-family: 'Courier New', Courier, monospace; /* What font do we want here */
  background: linear-gradient(45deg, #ff9a9e, #fad0c4);
  color: #333;
  align-items: center;
  justify-content: center;
  height: 100vh;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
}

h1 {
  font-weight: 800;
  font-size: 1.5rem;
}

#message {
  border-radius: 25px;
  border: 2px solid #000000;
  padding: 20px;
  width: 300px;
  height: 125px;
  background: #FFFFFF;
}

.state {
  border-radius: 25px;
  padding: 5px;
  background: #FFFFFF;
}

